--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "license": "ISC",
   "dependencies": {
     "@cypress/browserify-preprocessor": "^1.0.2",
+    "chalk": "^2.3.2",
     "eslint": "^4.19.1"
   }
 }
