--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Cypress plugin that will run linting via ESLint on your spec files as they are loaded and display errors in console",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "lint": "eslint index.js"
   },
   "keywords": [
     "cypress",
@@ -20,5 +20,9 @@
     "@cypress/browserify-preprocessor": "^1.0.2",
     "chalk": "^2.3.2",
     "eslint": "^4.19.1"
+  },
+  "devDependencies": {
+    "eslint-config-airbnb-base": "^12.1.0",
+    "eslint-plugin-import": "^2.10.0"
   }
 }
