--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "description": "Cypress plugin that will run linting via ESLint on your spec files as they are loaded and display errors in console",
   "main": "index.js",
   "scripts": {
-    "lint": "eslint index.js"
+    "lint": "eslint index.js",
+    "test": "mocha --require babel-core/register --reporter spec \"test/index.spec.js\"",
+    "test:watch": "npm test -- --watch",
+    "prepublish": "npm run lint && npm test"
   },
   "keywords": [
     "cypress",
@@ -22,7 +25,13 @@
     "eslint": "^4.19.1"
   },
   "devDependencies": {
+    "babel-cli": "^6.26.0",
+    "babel-preset-env": "^1.6.1",
+    "babel-preset-stage-1": "^6.24.1",
     "eslint-config-airbnb-base": "^12.1.0",
-    "eslint-plugin-import": "^2.10.0"
+    "eslint-plugin-import": "^2.10.0",
+    "mocha": "^5.0.5",
+    "mockery": "^2.1.0",
+    "sinon": "^4.5.0"
   }
 }
