--- a/.eslintrc
+++ b/.eslintrc
@@ -1,16 +1,20 @@
 {
-    "extends": "airbnb-base",
-    "rules": {
-        "arrow-body-style": 0,
-        "comma-dangle": ["error", "never"],
-        "indent": ["error", 2],
-        "linebreak-style": ["error", "unix"],
-        "max-len": ["error", 120],
-        "no-console": 0,
-        "no-mixed-operators": 0,
-        "no-param-reassign": 0,
-        "no-tabs": 2,
-        "no-undef": 1,
-        "no-unused-vars": ["error"]
-    }
+  "extends": "airbnb-base",
+  "rules": {
+    "arrow-body-style": 0,
+    "comma-dangle": ["error", "never"],
+    "indent": ["error", 2],
+    "global-require": 0,
+    "guard-for-in": 0,
+    "linebreak-style": ["error", "unix"],
+    "max-len": ["error", 120],
+    "no-console": 0,
+    "no-mixed-operators": 0,
+    "no-param-reassign": 0,
+    "no-restricted-syntax": 0,
+    "no-tabs": 2,
+    "no-undef": 1,
+    "no-unused-vars": ["error"],
+    "no-use-before-define": 0
+  }
 }
