Add cypress-preprocessor npm keyword

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "cypress-eslint-preprocessor",
-  "version": "1.2.0",
+  "version": "1.2.1",
   "description": "Cypress plugin that will run linting via ESLint on your spec files as they are loaded and display errors in console",
   "main": "index.js",
   "scripts": {
@@ -12,6 +12,7 @@
   "keywords": [
     "cypress",
     "cypress-plugin",
+    "cypress-preprocessor",
     "eslint"
   ],
   "author": {
